--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <section id="header"><!-- Header -->
+        <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
               <div class="col-md-3 mb-2 mb-md-0">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
@@ -33,6 +34,7 @@
                 <button type="button" class="btn btn-primary">Sign-up</button>
               </div>
             </header>
+                </div>
     </section>
 
 
